--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.10'
 
     //firebase
     // Import the Firebase BoM
@@ -67,8 +68,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
-
-
+    //facebook
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'com.facebook.android:facebook-login:4.41.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     //testing
     testImplementation 'junit:junit:4.13.2'
