Add Mitra Apps + Fix Gradle

--- a/mitrailifeapps/build.gradle
+++ b/mitrailifeapps/build.gradle
@@ -11,9 +11,9 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.ibunda.ilifeapps"
-        minSdkVersion 21
-        targetSdkVersion 30
+        applicationId "com.ibunda.mitrailifeapps"
+        minSdk 21
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
@@ -40,6 +40,7 @@ android {
 }
 
 dependencies {
+
     //kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
