--- a/mitrailifeapps/src/main/AndroidManifest.xml
+++ b/mitrailifeapps/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ibunda.mitrailifeapps">
+    package="com.ibunda.mitrailifeapps" >
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,15 +11,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ILifeApps">
+        android:theme="@style/Theme.ILifeApps" >
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true" />
+        <activity android:name=".ui.splashscreen.SplashScreenActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".ui.dashboard.MainActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
