--- a/mitrailifeapps/src/main/AndroidManifest.xml
+++ b/mitrailifeapps/src/main/AndroidManifest.xml
@@ -15,7 +15,13 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true" />
-        <activity android:name=".ui.splashscreen.SplashScreenActivity" />
+        <activity android:name=".ui.splashscreen.SplashScreenActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -26,13 +32,7 @@
 
         <activity
             android:name=".ui.dashboard.MainActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"/>
     </application>
 
 </manifest>
