--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.ibunda.ilifeapps">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,33 +12,50 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ILifeApps">
+        <activity
+            android:name=".ui.dashboard.home.chats.ChatsActivity"
+            android:exported="true" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
 
         <activity
-            android:name="com.ibunda.ilifeapps.ui.maps.MapsActivity"
-            android:label="@string/title_activity_maps"/>
-        <activity android:name="com.ibunda.ilifeapps.ui.dashboard.home.chat.ChatActivity" />
-        <activity android:name="com.ibunda.ilifeapps.ui.splashscreen.SplashScreenActivity">
+            android:name=".ui.maps.MapsActivity"
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".ui.splashscreen.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.ibunda.ilifeapps.ui.onboarding.OnboardingActivity" />
-        <activity android:name="com.ibunda.ilifeapps.ui.dashboard.home.notifications.NotificationsActivity" />
-        <activity android:name="com.ibunda.ilifeapps.ui.login.LoginActivity" />
-        <activity android:name="com.ibunda.ilifeapps.ui.listmitra.ListMitraActivity" />
-        <activity android:name="com.ibunda.ilifeapps.ui.dashboard.transactions.detailTransaction.DetailActivity" />
-        <activity android:name="com.ibunda.ilifeapps.ui.dashboard.MainActivity"/>
+        <activity android:name=".ui.onboarding.OnboardingActivity" />
+        <activity android:name=".ui.login.LoginActivity" />
+        <activity android:name=".ui.listmitra.ListMitraActivity" />
+        <activity android:name=".ui.dashboard.transactions.detailTransaction.DetailActivity" />
+        <activity android:name=".ui.dashboard.MainActivity" />
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
-        <activity android:name="com.facebook.FacebookActivity" android:configChanges= "keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name" />
-        <activity android:name="com.facebook.CustomTabActivity" android:exported="true"> <intent-filter> <action android:name="android.intent.action.VIEW" /> <category android:name="android.intent.category.DEFAULT" /> <category android:name="android.intent.category.BROWSABLE" /> <data android:scheme="@string/fb_login_protocol_scheme" /> </intent-filter> </activity>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
